# deon

./: .git-blame-ignore-revs  .gitignore  .precommithook  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  checklist.json  checklist.yml  default_checklist_in_portuguese.txt  dev-requirements.txt  latex.tex  pyproject.toml  pytest.ini  references.yml  requirements.txt  setup.cfg  setup.py  test.tex
.github/workflows/: examples.yml  release.yml  tests-macos-latest.yml  tests-ubuntu-latest.yml  tests-windows-latest.yml  tests.yml
deon/: __init__.py  __main__.py  assets.py  cli.py  deon.py  ethics_checklist.py  formats.py  parser.py
deon/assets/: checklist.yml  checklist_RO.yml  checklist_pt-BR.yml  checklist_pt-RO.yml  examples_of_ethical_issues.yml  examples_of_ethical_issues_pt-BR.yml  examples_of_ethical_issues_pt-RO.yml  examples_of_ethical_issues_ro.yml
deon/assets/checklist/: checklist_eng_boss.yml  checklist_eng_worker.yml  checklist_esp_boss.yml  checklist_esp_worker.yml
deon/templates/: latex.txt
deonserver/: __init__.py  config.py
deonserver/checklists/testM/: testM_eng_boss.html  testM_eng_worker.html  testM_esp_boss.html  testM_esp_worker.html
deonserver/templates/: checklist.html  index.html
deonserver/views/: __init__.py  index.py
docs/: mkdocs.yml  render_templates.py
docs/alabaster/: config.html  main.html
docs/alabaster/sidebars/: related.html
docs/docs/: examples.md  index.md  index.md.old  references.md
docs/docs/extra_css/: extra.css
docs/docs/extra_html/sidebars/: navigation.html
docs/lux/css/: custom.css
docs/md_templates/: _common_body.tpl  _common_body_pt-BR.tpl  examples.tpl  index.tpl  readme.tpl  references.tpl
docs/templates/: _common_body.tpl
ethics_checklist/: ethics_checklist.py  formats.py  parser.py  utils.py
examples/: ethics.html  ethics.ipynb  ethics.md  ethics.rst  ethics.txt
tests/: assets.py  conftest.py  test_cli.py  test_deon.py  test_formats.py  test_parser.py
