[project]
name = "deon"
version = "0.3.0"
description = "Deon adds an ethics checklist to your data science projects."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "DrivenData", email = "info@drivendata.org" }
]
requires-python = ">=3.8"
keywords = ["data science", "ethics", "checklist"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "beautifulsoup4>=4.7.0",
  "click>=6.7",
  "pyyaml>=3.13",
]

[project.urls]
Homepage = "https://deon.drivendata.org"
Source = "https://github.com/drivendataorg/deon"
DrivenData = "https://drivendata.co"

[project.scripts]
deon = "deon.cli:main"

[dependency-groups]
dev = [
  "jinja2",
  "mkdocs",
  "mkdocs-alabaster @ git+https://github.com/drivendataorg/mkdocs-alabaster.git",
  "pytest",
  "pytest-cov",
  "pymdown-extensions",
  "ruff",
  "vspect",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

## TOOLS

[tool.ruff]
line-length = 99
src = ["deon", "tests", "docs"]

[tool.ruff.lint]
select = [
  "E", # Pycodestyle
  "F", # Pyflakes
  "I", # isort
  "W", # Pycodestyle
]
ignore = ["E501"]
unfixable = ["F"]

[tool.ruff.lint.isort]
known-first-party = ["deon", "assets"]
force-sort-within-sections = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=deon --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["deon"]
# debug = ["pathmap"]  # Useful if path mapping isn't working as expected

[tool.coverage.paths]
deon = [
  "deon/",
  "*/site-packages/deon/"
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
]
